examples/taint-checking/taint_checking.out
# To run this sample, navigate to the directory that contains the
# `.bal` file, and execute the `ballerina run` command.
$ ballerina run taint_checking.bal
error: .::taint_checking.bal:26:15: tainted value passed to untainted parameter 'sqlQuery'
error: .::taint_checking.bal:30:32: tainted value passed to untainted parameter 'secureParameter'
